--- a/pages/bruh.mdx
+++ b/pages/bruh.mdx
@@ -1,12 +1,13 @@
-# Another Page
+# bruh
 
 ```js filename="demo.js" {3} copy
 let a = 1;
+bruh bruh bruh
 
 console.log(a);
 ```
 
-## Campanant
+## Component
 
 import { useState } from "react";
 
