--- a/pages/bruh.mdx
+++ b/pages/bruh.mdx
@@ -27,6 +27,8 @@ export const Counter = () => {
 
 <Counter />
 
+<div className="text-red-700">bruh</div>
+
 ## External Component
 
 import Counters from "../components/counters";
